--- a/test/fixtures/payloads.yml
+++ b/test/fixtures/payloads.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  eamil: MyString
+  email: MyString
 
 two:
-  eamil: MyString
+  email: MyString
